--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,47 @@
 
 	<main class="page" role="main" >
 
-		<img class="logo" src="assets/img/hdr-logo-wide.png" alt="TMP Worldwide, LLC"/>
+		<a href="/"><img class="logo" src="/assets/img/hdr-logo-wide.png" alt="TMP Worldwide, LLC"/></a>
 
 		<article>
 
 			{{ content }}
 
+			<hr/>
+
+			<h3 id="moderators">Moderators</h3>
+
+			<ul>
+				<li><a href="https://github.com/michaelspellacy">Michael "Spell" Spellacy</a></li>
+				<li><a href="https://github.com/mhartz">Max Hartz</a></li>
+			</ul>
+
+			<h3 id="contributors">Contributors</h3>
+
+			<ul>
+				<li><a href="https://github.com/tmpworldwide/ui-dev-standards/graphs/contributors">The TMP Worldwide UID Team</a></li>
+			</ul>
+
+			<h3 id="frozen-in-carbonite">Frozen in Carbonite</h3>
+
+			<ul>
+				<li><a href="https://github.com/s-plum">Stephanie "Plum" Plumeri</a></li>
+				<li><a href="https://github.com/sethlopezme">Seth "Slopez" Lopez</a></li>
+			</ul>
+
+			<h3 id="how-to-contribute">How to Contribute</h3>
+
+			<ul>
+				<li>Suggest a change or offer your opinion by <a href="https://guides.github.com/features/issues/">opening or commenting on an issue</a>.</li>
+				<li><a href="https://guides.github.com/activities/forking/">Fork</a> the <i>tmpworldwide.github.io</i> project, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</li>
+				<li>New to GitHub? <a href="https://guides.github.com/activities/hello-world/">Learn the basics with the guide</a>, and <a href="https://guides.github.com/introduction/flow/">learn the GitHub flow</a>.</li>
+			</ul>
+
 		</article>
 
 		<p class="copyright">&copy; {{ "now" | date: "%Y" }} tmp.worldwide</p>
 
-		<p class="fork-github"><a href="https://github.com/tmpworldwide/ui-dev-standards">Fork me on Github</a></p>
+		<p class="fork-github"><a href="https://github.com/tmpworldwide/tmpworldwide.github.io">Fork me on Github</a></p>
 
 	</main>
 
