--- a/_sass/theme/layout/_content.scss
+++ b/_sass/theme/layout/_content.scss
@@ -49,6 +49,13 @@ border-radius: 5px;
 
 }
 
+hr {
+background: #999;
+border: 0;
+border-bottom: 1px dashed #ccc;
+margin: 2em 0;
+}
+
 .fork-github {
 margin: 0;
 
