--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 
 
  	<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  	<script src="assets/js/global.js"></script>
+  	<script src="/assets/js/global.js"></script>
 
 </body>
 </html>
