--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="assets/css/global.css"/>
-  <link rel="shortcut icon" href="favicon.ico"/>
-  <title>TMP Worldwide - UI Development Standards</title>
+  <link rel="stylesheet" href="/assets/css/global.css"/>
+  <link rel="shortcut icon" href="/favicon.ico"/>
+  <title>TMP Worldwide - Development Standards &amp; Tools</title>
 </head>
 <body>
