--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 			<h3 id="contributors">Contributors</h3>
 
 			<ul>
-				<li><a href="https://github.com/tmpworldwide/ui-dev-standards/graphs/contributors">The TMP Worldwide UID Team</a></li>
+				<li><a href="https://github.com/tmpworldwide/tmpworldwide.github.io/graphs/contributors">The TMP Worldwide UID Team</a></li>
 			</ul>
 
 			<h3 id="frozen-in-carbonite">Frozen in Carbonite</h3>
