Add: Dynamic Titles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="/assets/css/global.css"/>
   <link rel="shortcut icon" href="/favicon.ico"/>
-  <title>TMP Worldwide - Development Standards &amp; Tools</title>
+  <title>TMP Worldwide - {{ page.title }}</title>
 </head>
 <body>
