--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 			<ul>
 				<li><a href="https://github.com/s-plum">Stephanie "Plum" Plumeri</a></li>
 				<li><a href="https://github.com/sethlopezme">Seth "Slopez" Lopez</a></li>
+				<li><a href="https://github.com/sethtompkins">Seth "Stompkins" Tompkins</a></li>
 			</ul>
 
 			<h3 id="how-to-contribute">How to Contribute</h3>
