--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,4 @@
   <link rel="shortcut icon" href="/favicon.ico"/>
   <title>TMP Worldwide - {{ page.title }}</title>
 </head>
-<body>
+<body id="{{page.url | replace:'.html',''| replace: '/', '-' | remove_first: '-'}}"{% if page.section %} class="{{ page.section }}"{% endif %}>
