--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,25 @@
 
 
+ 	<script>
+
+	var host = "{{site.url}}";
+	
+	if (window.location.host == host && window.location.protocol != "https:") {
+  
+  		window.location.protocol = "https:"
+
+	}
+
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-41574642-2', 'auto');
+  	ga('send', 'pageview');
+
+	</script>
+
  	<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   	<script src="/assets/js/global.js"></script>
 
