--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="/assets/css/global.css"/>
-  <link rel="shortcut icon" href="/favicon.ico"/>
-  <link rel="canonical" href="https://{{ site.url }}{{ page.url }}" />
-  <title>TMP Worldwide - {{ page.title }}</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="canonical" href="https://{{ site.url }}{{ page.url }}" />
+	<script>
+  
+	var host = "{{site.url}}";
+	
+	if (window.location.host == host && window.location.protocol != "https:") { window.location.protocol = "https:"}
+	
+  	</script>
+  	<link rel="stylesheet" href="/assets/css/global.css"/>
+	<link rel="shortcut icon" href="/favicon.ico"/>
+  	<title>TMP Worldwide - {{ page.title }}</title>
 </head>
+
 <body id="{{page.url | replace:'.html',''| replace: '/', '-' | remove_first: '-'}}"{% if page.section %} class="{{ page.section }}"{% endif %}>
