--- a/_sass/rwd-school-of-rock/_fonts.scss
+++ b/_sass/rwd-school-of-rock/_fonts.scss
@@ -1,8 +1,8 @@
 /* Web fonts */
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700|Sigmar+One);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700|Sigmar+One);
 
-@import url(http://fonts.googleapis.com/css?family=Coda:400,800);
+@import url(https://fonts.googleapis.com/css?family=Coda:400,800);
 
 // Typography
 
