Ghetto HTTPS Redirect

--- a/_layouts/rwd-school-of-rock.html
+++ b/_layouts/rwd-school-of-rock.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8"/>
 	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+	{% include secure.html %}
+	
 	<link rel="stylesheet" href="/assets/css/rwd.css"/>
 	<title>{{ page.title }} -  RWD School of Rock!</title>
 </head>
