--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,9 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="canonical" href="https://{{ site.url }}{{ page.url }}" />
-	<script>
-  
-	var host = "{{site.url}}";
 	
-	if (window.location.host == host && window.location.protocol != "https:") { window.location.protocol = "https:"}
+	{% include secure.html %}
 	
-  	</script>
   	<link rel="stylesheet" href="/assets/css/global.css"/>
 	<link rel="shortcut icon" href="/favicon.ico"/>
   	<title>TMP Worldwide - {{ page.title }}</title>
