Added Brock. Max in Carbonite

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
 			<ul>
 				<li><a href="https://github.com/michaelspellacy">Michael "Spell" Spellacy</a></li>
-				<li><a href="https://github.com/mhartz">Max Hartz</a></li>
+				<li><a href="https://github.com/Brockenstein">Brock Barnett</a></li>
 			</ul>
 
 			<h3 id="how-to-contribute">How to Contribute</h3>
@@ -35,6 +35,7 @@
 
 			<ul>
 				<li><a href="https://github.com/s-plum">Stephanie "Plum" Plumeri</a></li>
+				<li><a href="https://github.com/mhartz">Max Hartz</a></li>
 				<li><a href="https://github.com/sethlopezme">Seth "Slopez" Lopez</a></li>
 				<li><a href="https://github.com/sethtompkins">Seth "Stompkins" Tompkins</a></li>
 			</ul>
