--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 						<li><a href="https://github.com/tmpworldwide/tmpworldwide.github.io/graphs/contributors">The TMP Worldwide UID Team</a></li>
 					</ul>
 
-					<p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> the <a href="https://github.com/tmpworldwide/tmp-pattern-library">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
+					<p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> this <a href="{{ site.repo }}">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
 
 					<p>New to GitHub? <a href="https://guides.github.com/activities/hello-world/">Learn the basics with the guide</a> and <a href="https://guides.github.com/introduction/flow/">learn the GitHub flow</a>.</p>
 
