--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 
 					<h3 id="qa-a11y">Quality Assurance and Accessibility</h3>
 
-        			<p>All patterns, functionality and layouts are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via an automated scan and with other assistive technology tools and methods. TMP is committed to the accessibility of it's websites and products and seeks to meet as much of WCAG 2.0 Level A and AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a href="mailto:michael.spellacy@tmp.com">Michael Spellacy</a>.</p>
+        			<p>All patterns, layouts, and functionality are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools. TMP is committed to the accessibility of it's websites and products and strives to meet as much of WCAG 2.0 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a href="mailto:michael.spellacy@tmp.com">Michael Spellacy</a>.</p>
 
 				</section>
 
