--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://styleguide.tmp.com/waves/theme/css/global.min.css"/>{% if page.localcss %}
+	<link rel="stylesheet" href="https://styleguide.tmp.com/wave/theme/css/global.min.css"/>{% if page.localcss %}
 	<link rel="stylesheet" href="{{ page.localcss }}"/>{% endif %}
 	<link rel="shortcut icon" href="https://styleguide.tmp.com/favicon.ico" type="image/x-icon">
 	<script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
@@ -16,7 +16,7 @@
 
 		<header id="top" class="banner">
 
-			<h1><a href="https://www.tmp.com/"><img src="https://services.tmpwebeng.com/tmp-styleguide/theme/waves/img/hdr-logo.svg" alt="TMP Worldwide, LLC"></a></h1>
+			<h1><a href="https://www.tmp.com/"><img src="https://styleguide.tmp.com/wave/theme/img/hdr-logo.svg" alt="TMP Worldwide, LLC"></a></h1>
 
 		</header>
 
@@ -78,7 +78,7 @@
 
 	<script src="/js/ga.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://styleguide.tmp.com/waves/theme/js/global.js"></script>{% if page.globaljs %}
+	<script src="https://styleguide.tmp.com/wave/theme/js/global.js"></script>{% if page.globaljs %}
 	<script src="{{ page.globaljs }}"></script>{% endif %}{% if page.localjs %}
 	<script src="{{ page.localjs }}"></script>{% endif %}
 
