Add min file to template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 
 	<script src="/js/ga.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://styleguide.tmp.com/wave/theme/js/global.js"></script>{% if page.globaljs %}
+	<script src="https://styleguide.tmp.com/wave/theme/js/global.min.js"></script>{% if page.globaljs %}
 	<script src="{{ page.globaljs }}"></script>{% endif %}{% if page.localjs %}
 	<script src="{{ page.localjs }}"></script>{% endif %}
 
