--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://styleguide.tmp.com/wave/theme/css/global.min.css"/>{% if page.localcss %}
-	<link rel="stylesheet" href="{{ page.localcss }}"/>{% endif %}
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://styleguide.tmp.com/wave/theme/css/global.min.css">{% if page.localcss %}
+	<link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
 	<link rel="shortcut icon" href="https://styleguide.tmp.com/favicon.ico" type="image/x-icon">
 	<script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
 	<title>{{ page.title }} - TMP Worldwide</title>
@@ -16,7 +16,7 @@
 
 		<header id="top" class="banner">
 
-			<h1><a href="https://www.tmp.com/"><img src="https://styleguide.tmp.com/wave/theme/img/hdr-logo.svg" alt="TMP Worldwide, LLC"></a></h1>
+			<h1><a href="https://www.tmp.com/"><img src="https://styleguide.tmp.com/wave/theme/img/hdr-logo.svg" alt="TMP Worldwide"></a></h1>
 
 		</header>
 
