--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
 
 			<h1><a href="https://www.tmp.com/"><img src="https://styleguide.tmp.com/wave/theme/img/hdr-logo.svg" alt="TMP Worldwide"></a></h1>
 
+			<a id="skip-nav" class="access-link" href="#primary-navigation">Skip to navigation</a>
+
 		</header>
 
 		<main>
@@ -56,6 +58,18 @@
 		</main>
 
   		<p class="back-to-top"><a href="#top">Return to top</a></p>
+
+		<nav id="primary-navigation">
+
+			<h2>Navigation</h2>
+
+			<ul>
+				<li id="nav-home"><a href="/">Home</a></li>
+				<li id="nav-uid-code-standards"><a href="/uid/code-standards/">Front-end Standards and Guidelines</a></li>
+				<li id="nav-tmp-resource-library"><a href="/tmp-resource-library/">Resource Library</a></li>
+			</ul>
+
+		</nav>
 
 	</div><!--/.page-->
 
