--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 					<h3 id="contributors">Contributors</h3>
 
 					<ul>
-						<li><a href="https://github.com/tmpworldwide/tmpworldwide.github.io/graphs/contributors">The TMP Worldwide UID Team</a></li>
+						<li><a href="{{ site.repo }}graphs/contributors">The TMP Worldwide UID Team</a></li>
 					</ul>
 
 					<p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> this <a href="{{ site.repo }}">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
