--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 
 			<ul>
 				<li id="nav-home"><a href="/">Home</a></li>
-				<li id="nav-uid-code-standards"><a href="/uid/code-standards/">Front-end Standards</a></li>
+				<li id="nav-uid-code-standards"><a href="/uid/code-standards/">UI Standards</a></li>
 				<li id="nav-tmp-resource-library"><a href="/tmp-resource-library/">Resource Library</a></li>
 			</ul>
 
