--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">{% if page.noindex %}
 	  <meta name="robots" content="noindex, nofollow">{% endif %}
-    <link rel="shortcut icon" href="https://styleguide.tmp.com/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://styleguide.tmp.com/crossover/theme/css/global.min.css">{% if page.localcss %}
+    <link rel="shortcut icon" href="https://tmpworldwide.dev/tmp-styleguide/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/css/global.min.css">{% if page.localcss %}
 	<link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
     <script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
     <title>{{ page.title }} - TMP Worldwide</title>
@@ -20,7 +20,7 @@
 
 				<header id="primary-header">
 
-					<h1 id="primary-header-logo"><a href="https://www.tmp.com/"><img src="https://styleguide.tmp.com/crossover/theme/img/global/tmp-logo.svg" alt="TMP Worldwide"></a></h1>
+					<h1 id="primary-header-logo"><a href="https://www.tmp.com/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="TMP Worldwide"></a></h1>
 
 					<p id="btn-skip-nav"><a href="#primary-content"><b>Skip to Main Content</b></a></p>
 
@@ -93,7 +93,7 @@
 
 		<footer id="primary-footer">
 
-		    <h1 id="primary-footer-logo"><a href="/"><img src="https://styleguide.tmp.com/crossover/theme/img/global/tmp-logo-drk.svg" alt="TMP Worldwide"></a></h1>
+		    <h1 id="primary-footer-logo"><a href="/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo-drk.svg" alt="TMP Worldwide"></a></h1>
 
 			<h2 id="primary-footer-subtitle">Build Your Talent</h2>
 
@@ -130,7 +130,7 @@
 
     <script src="/js/ga.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://styleguide.tmp.com/crossover/theme/js/global.min.js"></script>{% if page.globaljs %}
+    <script src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/js/global.min.js"></script>{% if page.globaljs %}
 	<script src="{{ page.globaljs }}"></script>{% endif %}{% if page.localjs %}
 	<script src="{{ page.localjs }}"></script>{% endif %}
 
