--- a/news/init.css
+++ b/news/init.css
@@ -1,29 +1,2 @@
-#page {
-  position: relative;
-  z-index: 2; }
-  .tmp-notice-active #page {
-    top: 0 !important; }
-
-#primary-header-container {
-  margin-bottom: -1px; }
-
-#tmp-notice {
-  background-color: #032439;
-  color: #fff;
-  display: block;
-  font-size: 18px;
-  letter-spacing: 0.6px;
-  padding: 1.4em;
-  position: relative;
-  text-align: center;
-  visibility: hidden;
-  width: 100%;
-  z-index: 1; }
-  .tmp-notice-active #tmp-notice {
-    visibility: visible; }
-  #tmp-notice .learn-more {
-    text-decoration: underline; }
-  #tmp-notice:hover .learn-more, #tmp-notice:focus .learn-more {
-    text-decoration: none; }
-
+#page{position:relative;z-index:2}.tmp-notice-active #page{top:0 !important}#primary-header-container{margin-bottom:-1px}#tmp-notice{background-color:#032439;color:#fff;display:block;font-size:18px;letter-spacing:0.6px;padding:1.4em;position:relative;text-align:center;visibility:hidden;width:100%;z-index:1}.tmp-notice-active #tmp-notice{visibility:visible}#tmp-notice .learn-more{text-decoration:underline}#tmp-notice:hover .learn-more,#tmp-notice:focus .learn-more{text-decoration:none}
 /*# sourceMappingURL=init.css.map */
