--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,6 +133,7 @@
     <script src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/js/global.min.js"></script>{% if page.globaljs %}
 	<script src="{{ page.globaljs }}"></script>{% endif %}{% if page.localjs %}
 	<script src="{{ page.localjs }}"></script>{% endif %}
+  <script id="tmp-news" src="https://tmpworldwide.dev/news/init.js"></script>
 
 </body>
 </html>
