--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,6 +104,7 @@
 		    	<li><a class="btn-twitter" href="https://twitter.com/tmpww"><b>Visit us on Twitter</b></a></li>
 		    	<li><a class="btn-linkedin" href="https://www.linkedin.com/company/tmp-worldwide"><b>Visit us on LinkedIn</b></a></li>
 		    	<li><a class="btn-youtube" href="https://www.youtube.com/user/TMPWorldwideNA"><b>Visit us on YouTube</b></a></li>
+          <li><a class="btn-github" rel="me" href="https://github.com/tmpworldwide">Visit us on Github</a></li>
 			</ul>
 
 			<div id="primary-footer-copyright">
@@ -112,7 +113,7 @@
 
 				<ul>
 					<li><a href="http://go.tmp.com/DemoTalentBrew">Request a Demo</a></li>
-				 <li><a href="mailto:michael.spellacy@tmp.com" rel="me">Contact Us <span class="wai">(TMP)</span></a></li>
+				 <li><a href="https://www.tmp.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
 					<li><a href="https://www.tmp.com/privacy/">Privacy Statement</a></li>
 					<li><a href="https://www.tmp.com/terms/">Terms &amp; Conditions</a></li>
 					<li><a href="https://www.tmp.com/support/">Support</a></li>
