--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
 
 					<h2 id="qa-a11y">Quality Assurance and Accessibility</h2>
 
-		        	<p>All patterns, layouts, and functionality are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools. TMP is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.0 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a href="mailto:michael.spellacy@tmp.com">Michael Spellacy</a>.</p>
+		        	<p>All patterns, layouts, and functionality are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools. TMP is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.0 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a rel="me" href="mailto:spell@spellacy.net">Michael Spellacy</a>.</p>
 
 				</section>
 
@@ -104,7 +104,6 @@
 		    	<li><a class="btn-twitter" href="https://twitter.com/tmpww"><b>Visit us on Twitter</b></a></li>
 		    	<li><a class="btn-linkedin" href="https://www.linkedin.com/company/tmp-worldwide"><b>Visit us on LinkedIn</b></a></li>
 		    	<li><a class="btn-youtube" href="https://www.youtube.com/user/TMPWorldwideNA"><b>Visit us on YouTube</b></a></li>
-          <li><a class="btn-github" rel="me" href="https://github.com/tmpworldwide">Visit us on Github</a></li>
 			</ul>
 
 			<div id="primary-footer-copyright">
@@ -113,7 +112,7 @@
 
 				<ul>
 					<li><a href="http://go.tmp.com/DemoTalentBrew">Request a Demo</a></li>
-				 <li><a href="https://www.tmp.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
+				    <li><a href="https://www.tmp.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
 					<li><a href="https://www.tmp.com/privacy/">Privacy Statement</a></li>
 					<li><a href="https://www.tmp.com/terms/">Terms &amp; Conditions</a></li>
 					<li><a href="https://www.tmp.com/support/">Support</a></li>
