--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 	  <meta name="robots" content="noindex, nofollow">{% endif %}
     <link rel="shortcut icon" href="https://tmpworldwide.dev/tmp-styleguide/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/css/global.min.css">{% if page.localcss %}
-	<link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
+	  <link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
+    <link rel="micropub" href="https://tmpworldwide.dev/micropub/main">
+    <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
     <script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
     <title>{{ page.title }} - TMP Worldwide</title>
 </head>
