--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <link href="https://indieauth.com/auth" rel="authorization_endpoint">
     <link href="https://tokens.indieauth.com/token" rel="token_endpoint">
     <link href="https://tmpworldwide-dev.herokuapp.com/micropub/main" rel="micropub">
+    <link href="https://webmention.herokuapp.com/api/webmention" rel="webmention">
     <script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
     <title>{{ page.title }} - TMP Worldwide</title>
 </head>
